[package]
name = "network-runtime"
version = "0.1.0"
edition = "2024"
license = "MS-PL"
description = "A JavaScript runtime built on deno_core with isolated worker contexts and Deno API support"
repository = "https://github.com/uwu/network-runtime"
keywords = ["v8", "runtime", "sandbox", "isolate", "deno"]
categories = ["development-tools", "web-programming"]

[[bin]]
name = "network-runtime"
path = "src/main.rs"

[dependencies]
deno_core = { git = "https://github.com/taskylizard/deno_core.git", branch = "flora-locker-compat", default-features = false, features = [
  "v8_use_custom_libcxx"
] }
deno_ops = { git = "https://github.com/taskylizard/deno_core.git", branch = "flora-locker-compat" }
deno_webidl = "0.225.0"
deno_web = "0.256.0"
deno_fetch = "0.249.0"
deno_net = "0.217.0"
deno_websocket = "0.231.0"
deno_fs = "0.136.0"
deno_io = "0.136.0"
deno_telemetry = "0.47.0"
deno_tls = "0.212.0"
deno_error = "0.7.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
oxc_sourcemap = "6.0.1"
deno_crypto = "0.240.0"
oxc = { version = "0.107.0", features = ["ast_visit", "codegen", "transformer", "full"] }
tokio = "1.49.0"
futures = "0.3.31"
once_cell = "1.21.3"

[patch.crates-io]
# Use our deno_core fork compatible with rusty_v8 locker API
deno_core = { git = "https://github.com/taskylizard/deno_core.git", branch = "flora-locker-compat" }
deno_ops = { git = "https://github.com/taskylizard/deno_core.git", branch = "flora-locker-compat" }
serde_v8 = { git = "https://github.com/taskylizard/deno_core.git", branch = "flora-locker-compat" }
# Use our local rusty_v8 fork with Locker/Unlocker support
v8 = { path = "rusty_v8" }
